# static-server

./: Cargo.toml  README.md
src/: handler.rs  main.rs  model.rs  server.rs  utils.rs  watcher.rs
templates/: index.html
